--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
       <i id="i-code" class="fa-solid fa-code"></i>
       <span id="du">Du</span>Stein
     </div>
+
     <div class="nav">
-      <ul>
-        <li id="contact"><i class="fa-solid fa-bars"></i>Contact</li>
-        <!-- <li id="home">Linkedin</li>
-        <li id="home">Github</li> -->
+      <ul class="nav-links">
+        <i id="hamburger" class="fa-solid fa-bars"></i>
+        <li id="contact">Contact</li>
+        <li id="home">Linkedin</li>
+        <li id="home">Github</li>
       </ul>
     </div>
+
   </header>
   <main>
     <div class="first">
