--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <div class="nav">
       <ul class="nav-links">
         <i id="hamburger" class="fa-solid fa-bars"></i>
-        <li id="contact">Contact</li>
-        <li id="home">Linkedin</li>
-        <li id="home">Github</li>
+        <li><i class="fa-regular fa-envelope"></i><span class="botton-links">e-Mail</span></li>
+        <li><i class="fa-brands fa-linkedin"></i><span class="botton-links">LinkedIn</span></li>
+        <li><i class="fa-brands fa-github"></i><span class="botton-links">Github</span></li>
       </ul>
     </div>
 
