--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     </div>
     <div class="third">
       <ul>
-        <li><i class="fa-regular fa-envelope"></i><span class="botton-links">e-mail</span></li>
-        <li><i class="fa-brands fa-linkedin"></i><span class="botton-links">LinkedIn</span></li>
-        <li><i class="fa-brands fa-github"></i><span class="botton-links">Github</span></li>
+        <li><i class="fa-regular fa-envelope"></i><span class="botton-links"><a href="...">e-Mail</a></span></li>
+        <li><i class="fa-brands fa-linkedin"></i><span class="botton-links"><a href="https://www.linkedin.com/in/eduardo-s-7723701a3/">LinkedIn</a></span></li>
+        <li><i class="fa-brands fa-github"></i><span class="botton-links"><a href="https://github.com/dustein">Github</a></span></li>
       </ul>
     </div>
   </main>
