--- a/adiante/inicio-projeto-blog.html
+++ b/adiante/inicio-projeto-blog.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, width=device-width">
     <!-- <link href="/static/favicon.ico" rel="icon"> -->
-    <link rel= "stylesheet" type= "text/css" href= "/static/style.css">
+    <link rel= "stylesheet" type= "text/css" href= "static/css/style.css">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Montserrat+Underline:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
       </style>
