--- a/ppt-duda/index.html
+++ b/ppt-duda/index.html
@@ -20,7 +20,8 @@
     <div class="jogadaUser"><p>Você escolheu XXXX. </p><p>Duda escolheu...</p></div>
 
     <div class="videoArea"><p id="aguardando">Aguardando ...</p></div>
-
+    <div id="div-arco"><img id="arco-iris" src="midia/arco-iris.svg" alt=""></div>
+    
     <div id="subVideo">
       <div id="jogadaMaquina">TESOURA!</div>
       
