--- a/ppt-duda/index.html
+++ b/ppt-duda/index.html
@@ -11,16 +11,21 @@
   <header>
     <h2>Desafie a Duda !</h2>
     <h1>Pedra, Papel, Tesoura</h1>
+    <!-- <div id="div-arco"><img id="arco-iris" src="midia/arco-iris.svg" alt=""></div> -->
   </header>
 
   <main class="gameArea">
 
-    <!-- <button id="botaoJogar" onclick="startGame()"><p>Clique</p><p>para</p><p>Jogar</p></button> -->
+    <button id="botaoJogar" onclick="startGame()"><p>Clique</p><p>para</p><p>Jogar</p></button>
     
-    <div class="jogadaUser"><p>Você escolheu XXXX. </p><p>Duda escolheu...</p></div>
+    <!-- <div class="jogadaUser"><p>Você escolheu XXXX. </p><p>Duda escolheu...</p></div> -->
 
-    <div class="videoArea"><p id="aguardando">Aguardando ...</p></div>
-    <div id="div-arco"><img id="arco-iris" src="midia/arco-iris.svg" alt=""></div>
+    <!-- <div class="videoArea">
+      <div id="aguardando">
+        <p>Aguardando ...</p>
+        <img id="arrow-down" src="midia/arrow-down.svg" alt="arrow down">
+      </div>
+    </div> -->
     
     <div id="subVideo">
       <div id="jogadaMaquina">TESOURA!</div>
