ajustes no script

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <h2>Projects</h2>
         <div class="sec-content">
           <div class="projects" id="project1">
-            <img src="media/ppt-duda.bmp" alt="">
+            <img src="static/media/ppt-duda-screenshot.png" alt="">
             <p class="project-description">Rock Paper Scissors Game</p>
             <p id="divisor">---  ---  ---  ---  ---</p>
           </div>
