--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
         <p id="description">I'm a Full Stack Software Engineer who loves Front End and passionate abut Back End.</p>
       </div>
       <div class="imagem-fundo">
-        <img src="static/g261.svg" alt="">
+        <img src="static/media/edu-face_background.svg" alt="background image the developer face etilized">
+      </div>
+      <div class="sub-texto-first">
+        <p>Some Projects to Show</p>
+        <i id="arrow-down" class="fa-solid fa-arrow-down"></i>
       </div>
 
     </div>
