--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>DuStein - developer</title>
   <link rel="stylesheet" href="static/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Ubuntu&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/e3f0f30529.js" crossorigin="anonymous" defer></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Ubuntu&display=swap" rel="stylesheet">
+
   <script>
     function menuToggle() {
       let menu = document.querySelector(".links-menu");
@@ -23,8 +23,7 @@
 <body>
   <header>
     <div class="logo">
-      <i id="i-code" class="fa-solid fa-code"></i>
-      <span id="du">Du</span>Stein
+      <span id="logo-code">&lt;/&gt;</span><span id="du">Du</span>Stein
     </div>
 
     <div class="nav">
@@ -50,7 +49,8 @@
         <a href="#">
           <li>Contato</li>
         </a>
-      </ul>    </div>
+      </ul>    
+    </div>
 
   </header>
   <main>
@@ -74,11 +74,11 @@
       <h2>Projects</h2>
         <div class="sec-content">
           <div class="projects" id="project1">
-            <img src="static/media/ppt-duda-screenshot.png" alt="">
+            <img class="project-image" src="static/media/ppt-duda-screenshot.png" alt="Screenshot rock paper scissors game">
             <p class="project-description">Rock Paper Scissors Game</p>
             <p id="divisor">---  ---  ---  ---  ---</p>
           </div>
-          <div class="projects" id="project2">
+          <!-- <div class="projects" id="project2">
             <img src="media/cerva.bmp" alt="">
             <p class="project-description">Compare Prices Application</p>
             <p id="divisor">---  ---  ---  ---  ---</p>
@@ -87,16 +87,31 @@
             <img src="media/adv.bmp" alt="">
             <p class="project-description">Wordpress Site</p>
             <p id="divisor">---  ---  ---  ---  ---</p> 
-          </div>
+          </div> -->
         </div>
 
 
     </div>
     <div class="third">
       <ul>
-        <li><i class="fa-regular fa-envelope"></i><span class="botton-links"><a href="...">e-Mail</a></span></li>
-        <li><i class="fa-brands fa-linkedin"></i><span class="botton-links"><a href="https://www.linkedin.com/in/eduardo-s-7723701a3/">LinkedIn</a></span></li>
-        <li><i class="fa-brands fa-github"></i><span class="botton-links"><a href="https://github.com/dustein">Github</a></span></li>
+        <li>
+          <a class="botton-links" href="...">
+            <img class="symbols-svg" src="static/email.svg" alt="e-mail icon">
+            e-Mail
+          </a>
+        </li>
+        <li>
+          <a class="botton-links" href="...">
+            <img class="symbols-svg" src="static/linkedin.svg" alt="linkedin icon">
+            LinkedIn
+          </a>
+        </li>
+        <li>
+          <a class="botton-links" href="...">
+            <img class="symbols-svg" src="static/github.svg" alt="github icon">
+            e-Mail
+          </a>
+        </li>
       </ul>
     </div>
   </main>
