--- a/index.html
+++ b/index.html
@@ -75,32 +75,55 @@
     <div id="second" class="second">
       <h2>Projects</h2>
         <div class="sec-content">
+
           <div class="projects" id="project1">
-            <img class="project-image" src="static/media/ppt-duda-screenshot.png" alt="Screenshot rock paper scissors game">
-            <p class="project-description">Rock Paper Scissors Game</p>
+
+            <a href="/ppt-duda">
+              <img class="project-image" src="static/media/ppt-duda-screenshot-iphone12pro.png" alt="Screenshot rock paper scissors game">
+              <p class="project-description">Rock Paper Scissors Game</p>
+            </a>
             <!-- <p id="divisor">---  ---  ---  ---  ---</p> -->
           </div>
-          <!-- <div class="projects" id="project2">
-            <img src="media/cerva.bmp" alt="">
-            <p class="project-description">Compare Prices Application</p>
-            <p id="divisor">---  ---  ---  ---  ---</p>
+          
+          <div class="projects" id="project2">
+            <img class="project-image" src="/static/media/rascore-screenshot-iphone12pro.png" alt="">
+            <p class="project-description">RasCORE - Scheduling Application</p>
+            <!-- <p id="divisor">---  ---  ---  ---  ---</p> -->
           </div>
+
           <div class="projects" id="project3">
-            <img src="media/adv.bmp" alt="">
-            <p class="project-description">Wordpress Site</p>
-            <p id="divisor">---  ---  ---  ---  ---</p> 
-          </div> -->
+            <img class="project-image" src="/static/media/fisiocronos-screenshot-iphone12pro.png" alt="">
+            <p class="project-description">FisioCronos - Cronometer Application</p>
+            <!-- <p id="divisor">---  ---  ---  ---  ---</p> -->
+          </div>
+
+          <div class="projects" id="project4">
+            <img class="project-image" src="/static/media/morebeer-screenshot-iphone12pro.png" alt="">
+            <p class="project-description">MoreBeer - Volume Compare Application</p>
+            <!-- <p id="divisor">---  ---  ---  ---  ---</p> -->
+          </div>
+
+          
         </div>
 
 
     </div>
+
     <div class="third">
       <ul>
         <li>
-          <a class="botton-links" href="mailto:steindu@gmail.com">
+          <div class="botton-links" href="#">
             <img class="symbols-svg" src="static/email.svg" alt="e-mail icon">
-            e-Mail
-          </a>
+            <div style="display:flex">
+              <p>stein</p>
+              <p style="display:none">@teste</p>
+              <p>du</p>
+              <div>@</div>
+              <div>gmail</div>
+              <p>.</p>
+              <p>com</p>
+            </div>
+          </div>
         </li>
         <li>
           <a class="botton-links" href="https://www.linkedin.com/in/eduardo-s-7723701a3/">
@@ -116,6 +139,7 @@
         </li>
       </ul>
     </div>
+
   </main>
   <footer>@DuStein</footer>
 </body>
