--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
         <div class="sec-content">
 
           <div class="projects" id="project1">
-
-            <a href="/ppt-duda">
+            <a href="/ppt-duda" target="_blank" rel="noopener noreferrer">
               <img class="project-image" src="static/media/ppt-duda-screenshot-iphone12pro.png" alt="Screenshot rock paper scissors game">
               <p class="project-description">Rock Paper Scissors Game</p>
             </a>
@@ -92,9 +91,11 @@
           </div>
 
           <div class="projects" id="project3">
-            <img class="project-image" src="/static/media/fisiocronos-screenshot-iphone12pro.png" alt="">
-            <p class="project-description">FisioCronos - Cronometer Application</p>
-            <!-- <p id="divisor">---  ---  ---  ---  ---</p> -->
+            <a href="https://fisio-cronos.vercel.app/" target="_blank" rel="noopener noreferrer">
+              <img class="project-image" src="/static/media/fisiocronos-screenshot-iphone12pro.png" alt="">
+              <p class="project-description">FisioCronos - Cronometer Application</p>
+              <!-- <p id="divisor">---  ---  ---  ---  ---</p> -->
+            </a>
           </div>
 
           <div class="projects" id="project4">
