ajuste fontsize menu

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <a href="https://dustein.com">
           <li>DuStein</li>
         </a>
-        <a href="mailto:steindu@gmail.com">
+        <a href="#">
           <li>e-Mail</li>
         </a>
       </ul>    
