add project site

--- a/index.html
+++ b/index.html
@@ -118,6 +118,13 @@
           </a>
         </div>
 
+        <div class="projects" id="project5">
+          <a href="https://dustein.github.io/site-novo-rio" target="_blank" rel="noopener noreferrer">
+            <img class="project-image" src="/static/media/site_clube-screenshot-iphone12pro.png" alt="Simple React Site">
+            <p class="project-description">Clube Bandeirantes - Simple Site in React</p>
+          </a>
+        </div>
+
       </div>
 
 
