--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         
         <div class="projects" id="project2">
-          <a href="http://" target="_blank" rel="noopener noreferrer">
+          <a href="https://github.com/dustein/project_cs50" target="_blank" rel="noopener noreferrer">
             <img class="project-image" src="/static/media/rascore-screenshot-iphone12pro.png" alt="RasCORE - Scheduling Application">
             <p class="project-description">RasCORE - Scheduling Application</p>
           </a>
@@ -147,13 +147,13 @@
           </div>
         </li>
         <li>
-          <a class="botton-links" href="https://www.linkedin.com/in/eduardo-s-7723701a3/">
+          <a class="botton-links" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/eduardo-s-7723701a3/">
             <img class="symbols-svg" src="static/linkedin.svg" alt="linkedin icon">
             LinkedIn
           </a>
         </li>
         <li>
-          <a class="botton-links" href="https://github.com/dustein">
+          <a class="botton-links" target="_blank" rel="noopener noreferrer" href="https://github.com/dustein">
             <img class="symbols-svg" src="static/github.svg" alt="github icon">
             Github
           </a>
