--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
 
         <div class="projects" id="project4">
-          <a href="http://" target="_blank" rel="noopener noreferrer">
+          <a href="/morebeer" target="_blank" rel="noopener noreferrer">
             <img class="project-image" src="/static/media/morebeer-screenshot-iphone12pro.png" alt="MoreBeer - Volume Compare Application">
             <p class="project-description">MoreBeer - Volume Compare Application</p>
           </a>
